--- a/localisation/KR_East_Turkestan_l_simp_chinese.yml
+++ b/localisation/KR_East_Turkestan_l_simp_chinese.yml
@@ -575,6 +575,9 @@
  ETS_RED_radical_socialist: "东突厥斯坦苏维埃共和国"
  ETS_RED_radical_socialist_ADJ: "东突厥斯坦"
  ETS_RED_radical_socialist_DEF: "东突厥斯坦苏维埃共和国"
+ ETS_mid_SOV: "中亚苏维埃联盟"
+ ETS_mid_SOV_ADJ: "中亚苏维埃联盟"
+ ETS_mid_SOV_DEF: "中亚苏维埃联盟"
 
  ETS_ALO: "哈萨克斯坦军区"
  ETS_ALO_ADJ: "哈萨克斯坦军区"
@@ -602,6 +605,7 @@
  EST_must_return: "§R民主革命党将尽力弥补东突厥斯坦独立运动对他民族同胞的野蛮行径。§!"
  EST_keep_our_self: "§R我们将全力稳固苏维埃的现有局势！§!"
  ETS_war_is_over: "§R已经没有战争需要继续了§!"
+ ETS_yi_wu_ji_hua_tt: "§R我们将开始新疆工业化的进程§!"
  ALO_get_no_shi: "未失守 £trigger_yes"
  ALO_get_ye_shi: "已失守 £trigger_no"
  KYR_get_no_shi: "未失守 £trigger_yes"
@@ -612,7 +616,9 @@
  UZB_get_ye_shi: "已失守 £trigger_no"
 
  ETS_tian_shan_de_ying:0 "天山雄鹰"
+ ETS_tian_shan_de_ying2:0 "伟大领袖"
  ETS_xin_yang_de_rong_yao:0 "“信仰的荣誉”“§RSalah ad-Din§!”"
+ ETS_xin_yang_de_rong_yao2:0 "“信仰的荣誉”“§RSalah ad-Din§!”"
  ETS_hong_se_tie_mu_er:0 "红色帖木儿"
 
  ETS_Central_east_war_cat:0 "大中亚战争"
@@ -628,6 +634,16 @@
  ETS_shi_yue_yu_huo:0 "十月的余火"
  ETS_shi_yue_yu_huo_desc:0 "当我们在中亚独立抗战，艰难护家的时，如天降甘霖之前的闪电一般惊喜的事发生了。东亚的革命同志从硝烟中站起，解放东亚势在必得，而且如果我们挥兵一处，则兵锋无往不利。§R全世界无产者，联合起来！§!"
  ETS_war_timer:0 "战争！"
+
+ ETS_di_yi_wu_nian_category:0 "一五计划"
+ ETS_develop_zhun_ga_er_oil_wells:0 "开发准噶尔油田"
+ ETS_develop_ta_ke_la_ma_oil_wells:0 "开发塔克拉玛干油田"
+ ETS_develop_a_er_tai_shan_steel_mines:0 "开采阿尔泰山钢铁"
+ ETS_develop_tian_shan_steel_mines:0 "开采迪化钢铁"
+ ETS_develop_kun_lun_shan_steel_mines:0 "开采昆仑山钢铁"
+ ETS_bulid_xin_jiang:0 "新疆城市化"
+ ETS_bulid_tu_jue_si_tan:0 "突厥斯坦城市化"
+ ETS_bulid_ha_sha_ke_si_tan:0 "哈萨克斯坦城市化"
 
  ETS_bu_chang_zheng_ce:0 "民族仇杀补偿标准"
  ETS_min_zu_dai_biao:0 "民族代表法案"
@@ -648,6 +664,7 @@
  ETS_gong_xiang_tian_ci_desc:0 "先知穆罕默德（愿主赐他平安）说过：“没有人吃得比他所做的更好。”诚实、勤勉的工作总将改变我们的国度与你的人生，劳动吧，公民们。"
  ETS_gong_xiang_tian_ci5:0 "“花园”"
  ETS_gong_xiang_tian_ci5_desc:0 "民族精神描述：古代的经书曾将人死后的世界描述成纵情享受性爱与美酒，男人们能够拥有九位美丽顺从的处女的世界...是真是假我们无从考证，但我们只知道人死前的世界一定要有这两样东西：尊严和自由。"
+ ETS_xian_dai_hua_da_yue_jin:0 "现代化大跃进"
 
  ETS_ALO_totalist_party_one:0 "东突厥斯坦民主党（哈萨克游击队）"
  ETS_ALO_totalist_party_one_long:0 "东突厥斯坦民主党（哈萨克游击队）"
@@ -760,7 +777,7 @@
  ETS_mo_xu_fu_chou:0 "默许复仇思潮"
  ETS_mo_xu_fu_chou_desc:0 "民族军之所以能在十年前发展壮大，与对汉人的仇恨绝对脱不开干系——俄罗斯人把中亚的城市夷为平地，将我们的同胞套上枷锁。域内破碎的家庭对此咬牙切齿，大字不识的百姓对于俄族的仇杀更是时有发生——我们对此情绪在人民当中的发酵睁一只眼闭一只眼，§R以武力夺走的，必将被仇愤夺回。§!要想这股情绪缓和下来？那得等到大仇得报再提..."
  ETS_zai_wu_1938:0 "再无1938"
- ETS_zai_wu_1938_desc:0 " "
+ ETS_zai_wu_1938_desc:0 "俄军陷入永无止境的欧战当中，压倒他们只需要最后一根稻草...在不久前的中亚战争中，俄罗斯人乘我们战乱方止，乘虚而入。在大战的灾难过后，俄罗斯人眼睁睁的从我们手中夺走了半个中亚，此仇不报非君子，我们要举起第二次中亚战争的土地，与侵略者殊死一搏，不过这次，不死不休！"
 
  ETS_da_ji_ha_de:0 "大吉哈德"
  ETS_da_ji_ha_de_desc:0 "除真主外，别无神灵"
@@ -773,7 +790,7 @@
  ETS_tuan_jie_yi_xin:0 "团结一心"
  ETS_tuan_jie_yi_xin_desc:0 "“你们要紧紧抓住主的绳索，不可分裂”"
  ETS_ren_shan_gong_he:0 "仁善共和"
- ETS_ren_shan_gong_he_desc:0 " "
+ ETS_ren_shan_gong_he_desc:0 "“真主命令你们公正、行善、宽容亲戚，禁止做邪恶、罪孽、暴虐和不义之事；他教导你们，以便你们可以记住。”"
  ETS_hong_se_jing_shu:0 "红色经书"
  ETS_hong_se_jing_shu_desc:0 "“真主是至知的主，他按次序降示了《古兰经》，他每时每刻都在创造事物”。毫无疑问，真主现如今也在创造事物，若是按图索骥，便是无耻背叛。"
  ETS_xiang_wu_tuo_bang:0 "向乌托邦前进"
@@ -784,6 +801,34 @@
  ETS_li_xing_chong_bai_desc:0 "“你们不要为安拉树立任何比拟物，安拉不宽恕以物配主的罪过，那些绘制有生命之物形象之人将在复苏日遭到天罚。”"
  ETS_di_shang_tian_guo:0 "地上天国终建成"
  ETS_di_shang_tian_guo_desc:0 "“全人类原来是一个民族；真主派遣先知，带来清晰的其实，警示世人，以便人们不再争论。真主通过这些启示使信仰成为人们的指南。”"
+
+ ETS_zhong_gui_yi_tong:0 "终归一统"
+ ETS_zhong_gui_yi_tong_desc:0 "自满族人到来，东突厥斯坦的人民为了解放，大小抗争不断，可以报的上名号的共计四十二次。自俄罗斯人到来，西突厥斯坦的三个汗国在英勇抗击之后被逐一消解，直到德皇兵锋东进，才从枷锁中解放。\n\n他们反抗的原因只有一个：不愿失去自己所得之物。现如今，西域不会再成为汉匈之间的战壕，诸国不会因为吝啬汗血宝马而被天兵一扫而空。"
+ ETS_ha_sha_ke_da_ju:0 "哈萨克大局已定"
+ ETS_ha_sha_ke_da_ju_desc:0 "金帐汗国的子孙曾经称霸草原，见证过辉煌灿烂的岁月。但几个世纪以来，他们却在沙皇的御座下卑躬屈膝，被俄国主子派上战场流血卖命——就像罗马人对他们一样...时至今日，草原民族重上钢铁马背，与同胞一起保卫来之不易的自由。"
+
+ ETS_pa_mi_er:0 "帕米尔的红鹰"
+ ETS_pa_mi_er_desc:0 "阿巴索夫和突厥斯坦民主革命党深深明白中亚是一片怎么样的土地，在这里，宗教改革时代的光辉未曾显现，中世纪阿拉伯帝国的璀璨工业随着智慧宫一同化为尘土。愚昧，贫穷，落后...这里是帝国的坟场，也是人民的坟场...但毫不妥协的革命思想不会因为恶劣的客观环境而退缩，中亚将会在短短几年间完成跃进，向着现代化的目标。"
+ ETS_di_yi_wu_nian:0 "第一个五年计划"
+ ETS_di_yi_wu_nian_desc:0 "“人们在自己生活的社会生产中发生一定的、必然的、不以他们的意志为转移的关系，即同他们的物质生产力的一定发展阶段相适合的生产关系。这些生产关系的总和构成社会的经济结构，即有法律的和政治的上层建筑竖立其上并有一定的社会意识形式与之相适应的现实基础。”"
+ ETS_ci_she_zheng_zhi_ju:0 "赤色政治局"
+ ETS_ci_she_zheng_zhi_ju_desc:0 "中亚的历史问题积重难返，先锋队需要集中力量，在各个方面对反动流毒进行全方位的进攻，在此问题上，我们必须斥大量政治资源，组建一支从上到下的社会工作机构，以便党的意志在全国各个角落铺展开来。"
+ ETS_chan_chu_fu_xiu_zong_jiao:0 "铲除腐朽宗教"
+ ETS_chan_chu_fu_xiu_zong_jiao_desc:0 "虽然哪些占据着大量社会资源的地主老财已经消失，但是教会的势力仍然没能得到解决。他们的影响一日不得到处理，则中亚的社会一日不能从愚昧中脱离。"
+ ETS_min_zhu_zhuan_zheng:0 "民主专政"
+ ETS_min_zhu_zhuan_zheng_desc:0 "我们的人民必须认识到：他们自己有能力成为国家的主人，而且他们现在确实是国家的主人。他们曾经被压迫，知道封建主甚至奴隶主无边的权利，他们现在成为自己的主，手中的权利却比前者只多不少。"
+ ETS_jie_fang_gong_ren:0 "解放工人"
+ ETS_jie_fang_gong_ren_desc:0 "工人是布尔什维克天然的盟友，他将在新疆现代化过程当中成为进步势力的坚实后盾与战斗堡垒，正所以，他们将在无产阶级专政当中处于绝对的优势地位，和农村的进步农民组成统一战线，重重包围落后势力的苟合。"
+ ETS_nong_ye_gong_ye_hua:0 "农村机械化"
+ ETS_nong_ye_gong_ye_hua_desc:0 "让农民们了解唯心论的可笑，就应当让他们见识机械的伟力。日收千亩的收割机带来的冲击力要抵过数万篇口口相传的神迹，只要让人类的伟力能够代替神明改造自然，只要让群众从生产中脱出去思考，那么宗教的遮光布便会被轻易撕破。"
+ ETS_ge_ming_chong_bai:0 "革命崇拜"
+ ETS_ge_ming_chong_bai_desc:0 "在阿巴索夫的手中，权威和正义之声在中亚响彻，革命将不惜一切代价地进行下去，这一切都是为了无产阶级的利益。革命需要的是一支军队，手中拿的不是枪械而是书本，他们用以攻击的不是武力而是文化，每个人都呼喊着“领袖”，但声调和音色却互不相同，这便是领袖和先锋队存在的意义。"
+ ETS_a_la_bo_shao_mang:0 "阿拉伯语扫盲运动"
+ ETS_a_la_bo_shao_mang_desc:0 "在过去，教会学校牢牢把控着教育大权，无数贫困农民根本进入不到知识的世界，而只能在信仰的世界中醉生梦死...现如今则不然。公立学校在整片中亚大地如雨后春笋般拔地而起，每一篇绿洲，每一片部落的政治法令都无需宣读。"
+ ETS_xian_dai_hua:0 "现代化社会"
+ ETS_xian_dai_hua_desc:0 "传统主义的毒瘤最终在先锋队的祛魅下和中亚这片焕然一新的土地说了再见，因此，西化、城市化、现代化、世俗化、国际主义的红色中亚屹立于世，以一个崭新的姿态登上了国际舞台。"
+ ETS_ge_ming_feng_huo:0 "革命烽火"
+ ETS_ge_ming_feng_huo_desc:0 "陈旧的观念、落后的制度、封闭的环境在这一场思想风暴中逐渐瓦解，冰雪遇上烈日，无可替代抵挡地消融。新的理念、新的希望如春风般吹遍天山南北，让古老的土地焕发出沙漠的生机与活力。人们的目光不再聚焦脚下的荒漠与山川，而是投向更有希望的未来。旧有的一切在新思想的火焰中归于尘土。"
 
  xinren.1.t:0 "击毙赤匪首领！"
  xinren.1.d:0 "一直在准噶尔地区活跃的红俄匪帮首领莫斯莫里夫近日在和布克塞尔劫掠时被当地民团俘获后施以私刑处死，其人所领导的“东突厥斯坦民族军”向来在伊犁，塔城，阿山一带兴风作浪，猖獗至极。\n\n其副手伊万·波利诺夫随后带数千部队大规模袭扰我境内，以图报复匪首莫斯莫里夫之死，其兵锋一度曾触迪化城下，所幸我军与哈密军齐心协力，将其全歼于逃窜路上，其继任者阿合买提江与阿巴索夫分兵逃窜，难成大气。"
