--- a/localisation/KR_East_Turkestan_l_simp_chinese.yml
+++ b/localisation/KR_East_Turkestan_l_simp_chinese.yml
@@ -24,6 +24,9 @@
  POLITICS_MUHAMMAD_AMIN_BUGHRA_DESC: "§Y领导人介绍\n生于：§!1901年，大清帝国新疆省和阗\n§Y政治生涯：§!买买提依明·布格拉的早年生活充满了神秘色彩，小道消息暗示他在服兵役前曾在一所宗教学校教书。布格拉出身贾迪德派，亦是一名突厥人，但哪怕是在马绍武统治和阗时，他也没有享受过什么特殊待遇。布格拉心中满是为统一新疆而奋斗的坚定决心，对杨省长对驻军的软弱态度亦是极为鄙视。同时，布格拉也反对盛世才将军提出的以汉人为中心的军队改革，因为盛世才将军将军队管理不善归咎于伊斯兰教，而不是鸦片的泛滥。"
  POLITICS_SABIT_DAMULLA_ABDULBAKI_DESC: "§Y领导人介绍\n生于：§!1883年，大清帝国新疆省阿图什\n§Y政治生涯：§!沙比提·阿不都尔巴克大毛拉从未想过自己会成为新疆突厥民族主义运动的代言人。作为一名受过高等教育的学者和记者，阿不都尔巴克曾与世界上几位在世的最杰出的贾迪德派学者通信。通过贾迪德派的圈子，他认识了那些包括富有的贵族穆罕默德·阿明·布格拉在内的东突厥斯坦民族主义运动的杰出成员，并通过布格拉认识了更广泛的民族主义运动。由于大毛拉和蔼可亲的举止、务实的观点以及对几种语言的精通，经常发生争执的各民族主义派别均同意由他来担任东突厥斯坦的首任国家元首和政府首脑。然而，如果东突厥斯坦获得独立，大毛拉很可能会被该国的其他派系所取代。"
 
+ ETS_abdullah_bughra: "阿不都拉·布格拉"
+ ETS_nur_ahmadjan_bughra: "努尔·阿合买提江·布格拉"
+
  ETS_friendship_opinion_mod: "友谊"
  ETS_fledgling_military: "羽翼未丰的军队"
  ETS_fledgling_military_desc: "东突厥斯坦军队既缺乏实战经验，也少有训练有素的军官。唯有在今后的革命之路上坚定决心，锐意变法，才有战胜新疆的机会。"
