--- a/localisation/KR_Shandong_l_simp_chinese.yml
+++ b/localisation/KR_Shandong_l_simp_chinese.yml
@@ -691,7 +691,21 @@
  SQI.25.t:0 "天喜的故事：如今"
  SQI.25.d:0 "天喜的母亲没有看到儿子小学毕业，但她知道孩子的好名声，也因他而骄傲过。有一次，天喜老师选了12个孩子去参加县政府在县城举办的竞赛，天喜是其中之一。这对天喜家庭来说完全是件新鲜事，那无异是一场政府考试。天喜的母亲和姐姐非常激动，即使一向冷漠的父亲也很高兴。出发的那天早晨，家人起得很早，母亲忙于准备餐食，姐姐尽力为天喜打扮。他没有礼服，姐姐想给他穿她的丝绸外套，但外套太长而且是鲜红色，天喜穿着感到害羞，他们决定再罩上件蓝上衣，结果令人满意。一切准备就绪后，父亲和儿子出发了，母亲和姐姐在屋门前向他们招手。母亲低声向上帝祈祷，眼里噙着喜悦的泪水。为了与教师和其他孩子会合，天喜和父亲先到镇学校。每个孩子都有一名家长护送，所以教师、孩子、孩子的家长和驮畜走在乡间路上形成了一支相当规模的队伍。一路上，天喜父亲非常高兴，因而对儿子也特别友好。当路边一个农民问他去干什么时他高兴地告诉他，他儿子将去博取功名。然而即使在这种时候他也不忘节俭，在路边客栈吃中饭时，他只为儿子和他自己买了一把烘花生和一壶茶。天喜很饿，但他不敢再向父亲要。中饭后，孩子的家长回家，而教师和孩子们继续去县城，前面还有十英里路。到达目的地时，天喜又累又饿，但他非常激动，因为这是他第一次看到城市。男孩们在城里呆了约一个星期，过得非常愉快，没有为他们的主要任务——竟赛过分烦恼。看着这个城市，天喜开始想知道他毕业后能否再到城里学校读书。回到集镇学校后，其他孩子都妒忌地看着他们。除获得了许多奖赏外，天喜还赢得了政府荣誉证书。家里人都很高兴，邻居和村学校教师都向天喜和他家表示祝贺。或许是由于这次的成功，天喜母亲、大哥和姐姐决定让他上完中学。\n\n天喜在母亲去世后一年从集镇学校毕业。天喜必须决定是继续学习，还是回家务农或是去集镇商店当学徒。他哥哥与施洗礼者教堂的福音传道士谈起过这个问题，那人知道天喜的好成绩，他建议天喜去县城施洗礼者传教机构办的中学上学，那是所免费学校。天喜父亲未反对这一计划。天喜去城里参加入学考试那天非常冷，他必须步行八英里路，因为没有其他办法到达那儿。\n\n天喜被这所中学录取了。在那里他专心学习，每门功课都很优秀。毕业后，他被派到小学当教师。由于他出色的工作和声誉，他获得了去大学学习的机会。天喜在中学和大学期间每个暑假都回村探亲，与亲友重叙旧谊。大学毕业后，他娶了一位自己选中的姑娘，用自己的积蓄办了婚礼。现在他是小家庭尽责的家长。尽管他没有赚到大钱，但他曾在中学担任过重要的教学职务，现在是大学教师。他生活得很好，他还帮助家里的父亲和哥哥买了一些地，建造了一所新屋。因为他的成功，他家在村中的地位大大提高了。"
  SQI.25.a:0 "天喜的故事到此结束"
+ SQI.26.t:0 "破釜沉舟"
+ SQI.26.d:0 "自从北京政变的消息传来后，靳云鹗就将自己锁在了省长办公室里，这十年来，他和自己的老上司吴佩孚闹得很不愉快。十年前他就对吴佩孚说过了奉天是条饿虎，联合他们来对付冯玉祥是步臭棋，但是他却不听信自己非要和张作霖合作，最后闹出那些事情来，还搞得满清竟然复辟，惹得全天下谴责。现在吴佩孚终于吞下了自己酿成的苦果，命丧北京。现在一切的政局都要推翻重来了，山东必须要考虑要对大清保持什么样的态度，当然了以我们如今的力量最好还是乖乖听命得好，但是..."
+ SQI.26.a:0 "操蛋的，满人还敢骑在老子头上？"
+ SQI.26.b:0 "哪儿来的什么但是"
 
+ shandong.3.t:0 "屈映光的间谍被捕"
+ shandong.3.d:0 "济南的晨光洒在床头檀木柜之上，一旁的美人依然在梦中回忆着昨夜的云雨放浪，但此时，山东的督理靳云鹗将军，却在门外看到了一个神秘的访客。小朋友们，我们的故事就从这里开始了。将军眉头一皱，立即察觉到了危险的气氛。他对他的妻子们和守卫们说，“快，你们快躲起来，我来对付这个人”，随后成功地抓住了那个入侵者。接下来，将军让高汝桐去和这个神秘人对话，虽然神秘人极其狡猾，编出了一个又一个的谎言试图迷惑高将军，但最终还是一一被高将军看穿了。在高将军锐利的目光面前，他不得不承认，他其实是大坏蛋屈映光派来的人。不止如此，高将军还在这个人身上搜到了危险的武器，大吃一惊的他赶紧向靳大将军说到，“靳大人，我们应该立刻派人去屈映光的老巢调查一番，看看这家伙的老窝能不能撑住烈火的攻击”。但另一位从遥远日出之国赶来协助靳大将军的伊达顺之助将军却不这么认为，他用不太标准的中文说到，“屈映光的，大大的狡猾的干活。他的，应该已经知道自己的阴谋败露了的干活，所以我们的，去铁路阻止他们的干活。”但不管观点有怎样的分歧，他们两位都很担心，万一屈映光能召到更多人参与他的邪恶阴谋的话，事情就糟了，因此必须迅速采取行动，尤其是不能让吴佩孚大帅坐实靳云鹗不忠的事实。"
+ shandong.3.a:0 "叫人去封路！"
+ shandong.3.b:0 "叫人去抄家！"
+ shandong.4.t:0 "靳云鹗对大清当局申辩"
+ shandong.4.d:0 "虽然督理本人没有什么文字功底，但是山东能人如此之多已经足够写一篇完美的应答了。这一托辞旨在回答是什么原因造成了德州最近的恐慌，以及为什么这个问题不应该困扰陛下或玉帅本人。这封信描绘了一个满是强盗和骗子的省份，信中解释说，这种环境导致山东出现了张天然所引发的道德沦丧和毫无根据的谣言，尤其是张宗昌那家伙又一次死性不改，此外信中还提到国民党的威胁及自己对国民党的打击，因此皇帝陛下不能把自己撤职。甚至他还希望陛下能够增加对山东的拨款。"
+ shandong.4.a:0 "井水不犯河水"
+ shandong.5.t:0 "大清把靳云鹗抓了"
+ shandong.5.d:0 "高汝桐个鳖孙，当这蠢蛋在屈映光府内烧杀抢掠之时，屈映光已经踏上了前往北京的道路。尽管高汝桐想要把归仁会的密谋一网打尽，但是山东在面对北京的突袭时毫无抵抗之力。更惨的是，靳云鹗根本不知道这是对付自己的。在大牢里，靳云鹗向皇上写信请求家人探望，但被拒绝。第二天，靳云鹗的一个儿子问了屈映光，自己的老爹能不能在牢里活下来。"
+ shandong.5.a:0 "你爹在大牢里可好了"
  shandong.20.t:0 "一贯道寻求军事现代化"
  shandong.20.d:0 "消息传到了红枪会和大刀会等这些支持张天然的农民军耳中，他们开始向我们的地方官收购武器装备，不过他们所给的价钱属实惨不忍睹。然而地方官们却一起为他们背书，说支持他们就能削弱我们共同的敌人，我们可以私底下再给[SQI.GetNameDef]送一批武器，或者狠狠的揍他们的屁股。"
  shandong.20.a:0 "敌人的敌人就是我们朋友"
@@ -699,6 +713,15 @@
  shandong.23.t:0 "部队完成察哈尔骑兵训练"
  shandong.23.d:0 "在山东的察哈尔骑手们已经练出了一支新的骑兵队，张天然对这支军队展现出的虔信很是满意，他在演讲时用了《水浒传》的大段文字，号召他们能跟圆寂前的鲁智深一样大彻大悟。"
  shandong.23.a:0 "见信而寂"
+ shandong.970.t:0 "乐极生悲"
+ shandong.970.d:0 "在羞辱完张天然的欢乐之后，靳云鹗将他妈和路中节送到了一个镇子上，并且打算在镇子里好好玩一玩。当然，靳云鹗偶尔会停止享乐，把所谓的“民生”施舍给拾人涕唾的难民。不过当天在靳云鹗的商务办公室遭到了一贯道抗议者的袭击，靳云鹗迎回路中节这事儿让他们非常不爽，在靳云鹗派兵镇压他们之前，他们对靳云鹗骂不绝口。当晚的坏事还不只这些，山东不只是靳云鹗与张天然双方角力，吴佩孚的“特务”，同样是从皖系投奔到直系的屈映光一直不满靳云鹗凭借兵力霸占山东的举动。他认为他才是那个有资格督理山东的人，而现在他找到了机会他窃取到了一封靳督理写给他哥哥靳云鹏的密信，里面详细记载了靳云鹗推翻直系的计划。现在靳云鹗正面临着巨大的危机，但他还毫不知情..."
+ shandong.970.a:0 "真他妈该死"
+ shandong.971.t:0 "伊达顺之助在德州袭击了屈映光"
+ shandong.971.d:0 "伊达顺之助驻防德州后受到了比平时还要严重的抵抗，毫无疑问，这儿已经是屈映光和归仁会的地盘了。伊达顺之助来德州之后就开始搜捕屈映光，最终，在与归仁会士兵的一阵冲突之后，于海岛金山寺祭祖的屈映光被抓了，好在伊达顺之助干掉了民兵和屈映光本人，不过这也意味着我们需要更大的努力来人德州人闭嘴。战斗结束后，海岛金山寺已是火光冲天，而伊达本人则试图为自己找一个不在场证明。"
+ shandong.971.a:0 "这就是个庙，没人在乎的"
+ shandong.972.t:0 "高汝桐没在曲阜找着屈映光"
+ shandong.972.d:0 "作为靳云鹗最依仗的部下，这一次高汝桐却让靳云鹗失望了，屈映光早就逃走了，高汝桐没在这座归仁会控制的佛寺找到屈映光，甚至附近的居民都跟着屈映光逃走了，靳云鹗最终等来的是高汝桐的道歉和赔礼。靳云鹗没时间对他发火，他马上让日本骑兵奔赴德州。当然他们在德州也一无所获，靳云鹗不可能派人去骚扰北京把屈映光抓回来，他只能选择回到济南继续监视一贯道的活动，并期盼事情不会恶化到无法解决的地步。"
+ shandong.972.a:0 "真该死"
  shandong.988.t:0 "实验型坦克建设"
  shandong.988.d:0 "我军的几个军官曾经见识过德国装甲部队的作战，尽管这看似不可能，但是我们最终打造出了中国自主知识产权的坦克车！虽然其中有些组件是被摧毁的八省联合的遗产，但是大多数还是中国制造。现在我们已经学会怎么制造装甲载具了，我们就能给敌人送个大宝贝过去。"
  shandong.988.a:0 "这东西还能跑得起来"
@@ -709,25 +732,6 @@
  shandong.990.d:0 "洋人理解不了中国人和天地之间的深切联系，这帮子洋人玩着他们铁与火的玩具，而我们则掌控着自然宇宙之力，我们受命于天，定将洋人赶出中国。"
  shandong.990.a:0 "在石窟里靠一点残羹剩饭就能活着，真是可以了……"
 
- shandong.970.t:0 "乐极生悲"
- shandong.970.d:0 "在暴力的欢乐之中，靳云鹗把他妈和路中节送到了一个镇子上，并且打算在镇子里好好玩一玩。当然，靳云鹗偶尔会停止享乐，把所谓的“民生”施舍给拾人涕唾的难民。不过当天在靳云鹗的商务办公室遭到了一贯道抗议者的袭击，靳云鹗迎回路中节这事儿让他们非常不爽，在靳云鹗开车撵他们之前，他们对靳云鹗骂不绝口。当晚的坏事还不只这些，山东不只是靳云鹗与张宗昌、一贯道双方角力，吴佩孚的“特务”，同样是从皖系投奔到直系的屈映光一直不满靳云鹗凭借兵力霸占山东的举动。他认为他才是那个有资格督理山东的人，而现在他找到了机会他窃取到了一封靳督理写给他哥哥靳云鹏的密信，里面详细记载了靳云鹗推翻直系的计划。现在靳云鹗正面临着巨大的危机，但他还毫不知情..."
- shandong.970.a:0 "真他妈该死"
- shandong.3.t:0 "屈映光的间谍被捕"
- shandong.3.d:0 "济南的晨光洒在床头檀木柜之上，一旁的美人依然在梦中回忆着昨夜的云雨放浪，但此时，山东的督理靳云鹗将军，却在门外看到了一个神秘的访客。小朋友们，我们的故事就从这里开始了。将军眉头一皱，立即察觉到了危险的气氛。他对他的妻子们和守卫们说，“快，你们快躲起来，我来对付这个人”，随后成功地抓住了那个入侵者。接下来，将军让高汝桐去和这个神秘人对话，虽然神秘人极其狡猾，编出了一个又一个的谎言试图迷惑高将军，但最终还是一一被高将军看穿了。在高将军锐利的目光面前，他不得不承认，他其实是大坏蛋屈映光派来的人。不止如此，高将军还在这个人身上搜到了危险的武器，大吃一惊的他赶紧向靳大将军说到，“靳大人，我们应该立刻派人去屈映光的老巢调查一番，看看这家伙的老窝能不能撑住烈火的攻击”。但另一位从遥远日出之国赶来协助靳大将军的伊达顺之助将军却不这么认为，他用不太标准的中文说到，“屈映光的，大大的狡猾的干活。他的，应该已经知道自己的阴谋败露了的干活，所以我们的，去铁路阻止他们的干活。”但不管观点有怎样的分歧，他们两位都很担心，万一屈映光能召到更多人参与他的邪恶阴谋的话，事情就糟了，因此必须迅速采取行动，尤其是不能让吴佩孚大帅坐实靳云鹗不忠的事实。"
- shandong.3.a:0 "叫人去封路！"
- shandong.3.b:0 "叫人去抄家！"
- shandong.971.t:0 "伊达顺之助在德州袭击了屈映光"
- shandong.971.d:0 "伊达顺之助驻防德州后受到了比平时还要严重的抵抗，毫无疑问，这儿已经是屈映光和归仁会的地盘了。伊达顺之助来德州之后就开始搜捕屈映光，最终，在与归仁会士兵的一阵冲突之后，于海岛金山寺祭祖的屈映光被抓了，好在伊达顺之助干掉了民兵和屈映光本人，不过这也意味着我们需要更大的努力来人德州人闭嘴。战斗结束后，海岛金山寺已是火光冲天，而伊达本人则试图为自己找一个不在场证明。"
- shandong.971.a:0 "这就是个庙，没人在乎的"
- shandong.972.t:0 "陈树藩没在曲阜找着屈映光"
- shandong.972.d:0 "陈树藩那帮人为了一己私欲抛弃了自身所担负的任务，一大批曲阜居民随着屈映光一起跑走了，陈树藩的人没在这座归仁会控制的佛寺找到屈映光，靳云鹗最终等来的是陈树藩的道歉和赔礼，不过靳云鹗没消气，他马上让日本骑兵奔赴德州。当然他们在德州也一无所获，靳云鹗不可能派人去骚扰大清把屈映光抓回来，他只能选择回到济南继续监视一贯道的活动。"
- shandong.972.a:0 "至少我从中得了点好处"
- shandong.4.t:0 "靳云鹗对大清当局申辩"
- shandong.4.d:0 "虽然督理本人没有什么文字功底，但是山东能人如此之多已经足够写一篇完美的应答了。这一托辞旨在回答是什么原因造成了德州最近的恐慌，以及为什么这个问题不应该困扰溥仪或吴佩孚。这封信描绘了一个满是强盗和骗子的省份，信中解释说，这种环境导致山东出现了张天然所引发的道德沦丧和毫无根据的谣言，尤其是张宗昌那家伙一次死性不改，此外信中还提到国民党的威胁及自己对国民党的打击，因此皇帝陛下不能把自己撤职。甚至他还希望陛下能够增加对山东的拨款。"
- shandong.4.a:0 "没什么好看的，快滚！"
- shandong.5.t:0 "大清把靳云鹗抓了"
- shandong.5.d:0 "陈树藩个鳖孙，当这蠢蛋在屈映光府内烧杀抢掠之时，屈映光已经踏上了前往北京的道路。尽管陈树藩想要把归仁会的密谋一网打尽，但这也使得山东在面对大清军队时毫无准备。更惨的是，靳云鹗根本不知道这是对付自己的。在大牢里，靳云鹗向皇上写信请求家人探望，但被拒绝。第二天，靳云鹗的一个儿子问了屈映光，自己的老爹能不能在牢里活下来。"
- shandong.5.a:0 "你爹在大牢里可好了"
  shandong.6.t:0 "一贯道对靳云鹗表现了愤怒"
  shandong.6.d:0 "张天师没多久就调查出了有关路中节的情况。最初的反应是，他请求靳云鹗来到泰山与他进行一次会谈。但是这些信件被靳云鹗无视了，对于靳云鹗而言，他根本没有将一贯道和张宗昌放在眼里。最终，今天送到的信件语调明显变了。信针对着那个在济南的男人，说他在中国走私鸦片，为了西方人背叛了中国，还为了迎娶路中节。张天然公开宣布靳云鹗是魔鬼化身，让他来泰山接受最终审判，否则整个山东人民将揭竿而起，让他死无葬身之地。鲁系叛变而来的孙殿英建议先肃清泰山附近的居民，而另一位指挥官，陈树藩，则建议等待天师自己出来。"
  shandong.6.a:0 "来吧，我们直面这些苦行者"
@@ -1005,7 +1009,7 @@
  SQI_paternal_autocrat_party_wan:0 "皖系军阀"
  SQI_paternal_autocrat_party_wan_long:0 "皖系军阀(wan warlordsù)\n§g §!"
  SQI_paternal_autocrat_party_wan2:0 "安福俱乐部"
- SQI_paternal_autocrat_party_wan2_long:0 "安福俱乐部(Ānfú Jùlèbù)\n§g安福俱乐部是旧皖系军阀——这个曾不可一世的中国军阀的代言人，在灾难性的国民党北伐和随后血腥的德国干预的混乱中成员早已四散奔离。而踏上流亡之途前，他们的领袖经常在北京的一条胡同里聚会，这些中国人的团体便得名于此。自到如今，皖系军阀卷土重来，他们表示自己要恢复民国，重新组建国会，因而安福俱乐部这个御用党也复活过来。§!"
+ SQI_paternal_autocrat_party_wan2_long:0 "安福俱乐部(Ānfú Jùlèbù)\n§g安福俱乐部是旧皖系军阀——这个曾不可一世的中国军阀的代言人，在灾难性的国民党北伐和随后血腥的德国干预的混乱中成员早已四散奔离。而踏上流亡之途前，他们的领袖经常在北京的一条胡同里聚会，这个政治团体便得名于此。如今，皖系军阀卷土重来，他们表示将要恢复民国，重新组建国会，因而安福俱乐部这个皖系御用党也复活过来，尽管他们暂时无法再回到安福胡同，但是他们依旧继承了这个名字。§!"
 
  SQI_shou_jin_yan_lu:0 "查封赤色报纸"
  SQI_shou_jin_yan_lu_desc:0 "民国是好的，但是这些赤色份子所篡改的民国概念是不行的。"
