--- a/localisation/KR_Hunan_l_simp_chinese.yml
+++ b/localisation/KR_Hunan_l_simp_chinese.yml
@@ -473,6 +473,8 @@
  hengyang_arsernal:0 "衡阳兵工厂"
  zhuzhou_artillery:0 "株洲炮兵技术研究处"
  HNN_tie:0 "铁马空气压缩厂"
+ HNN_tie_mio_desc:0 "坦克设计商\n§L铁马空气压缩厂原身为豫丰纺织机械厂，是西南地区最大的纺织加工厂。§!"
+ HNN_faw_motors:0 "中国第一汽车集团"
  HNN_krupp:0 "克努伯股份公司"
  hengyang_arsenal:0 "衡阳兵工厂"
 
