--- a/localisation/QD_military_industrial_organization_l_simp_chinese.yml
+++ b/localisation/QD_military_industrial_organization_l_simp_chinese.yml
@@ -80,6 +80,18 @@
  toz_upgrade_2_7: "量产斜杆式地雷引信"
  toz_upgrade_3_1: "加重迫击炮打击套件"
  toz_upgrade_4_1: "改进金陵兵工厂"
+ putilovets_upgrade_1: "BVT装甲"
+ putilovets_upgrade_2: "双层装甲"
+ putilovets_upgrade_3: "重心居中的炮塔设计"
+ putilovets_upgrade_4: "复合装甲"
+ putilovets_upgrade_1_1: "加固合金"
+ putilovets_upgrade_dozer: "改进推土装备"
+ putilovets_upgrade_1_2: "侧裙甲"
+ putilovets_upgrade_2_1: "改进铁马空气压缩厂"
+ putilovets_upgrade_2_1_soc_rus: "改进铁马空气压缩厂"
+ putilovets_upgrade_3_1: "望远瞄具"
+ putilovets_upgrade_4_1: "增加炮口初速"
+ putilovets_upgrade_4_2: "楔形炮闩"
  SQI_si_fang_trait_cic_tt: "§g每有一级§H军工机构§!规模，通过研究获取的£civ_factory_output §H经济产能盈余§!将额外增加§G+250§!§!"
  SQI_si_fang_research_cic_tt: "\n§g提高§H军工机构§!规模，也将提高通过[?CIC_bonus]研究获取的£civ_factory_output §H经济产能盈余§!\n\n在该活动期间，获取的£civ_factory_output §H经济产能盈余§!总值：§W[?total_campaign_CIC]§!§!"
  SQI_manufacturer_trait_research_gain_bmz_tt: "§g§H七二炮铸造厂§!当前每有§W1%§!的£research_speed_icon §H研究速度§!，£research_speed_icon §H研究速度§!每周增长将提高§G+0.04%§!\n\n目前§H七二炮铸造厂§!拥有§W[?current_research_bonus]%§!的£research_speed_icon §H研究速度§!，这将使得£research_speed_icon §H研究速度§!每周增长提高§G+[?weekly_research_speed_to_add|.2]%§!"
