--- a/localisation/HNN_superevents_l_simp_chinese.yml
+++ b/localisation/HNN_superevents_l_simp_chinese.yml
@@ -98,3 +98,5 @@
 
  RUS_ice_march_trait: "白军传承"
  RUS_ice_march_trait_desc: "§L这位领导人乃是俄罗斯内战的老兵与英雄，曾同布党红色分子浴血奋战。如果哪一天俄罗斯大地上再次出现社会主义，那么他必将起身与之抗争。§!"
+ SQI_yue_dui: "姆吉卡"
+ SQI_yue_dui_desc: "§L这位领导人乃是女人中的女人，乐手中的乐手，女桐中的支配者，乐队中的统治者。§!"
