--- a/localisation/KR_Shandong_l_simp_chinese.yml
+++ b/localisation/KR_Shandong_l_simp_chinese.yml
@@ -179,6 +179,11 @@
  POLITICS_Boris_Annenkov_DESC:0 "鲍里斯在1914年之前一直在西伯利亚的哥萨克部队之中服役，而随后他参加了世界大战。在1918至1920年期间鲍里斯组织并领导了一支旨在反布尔什维克的哥萨克部队。在谢米列契和塞米巴拉金斯克地区立下赫赫战功。1920年，红军把他带领的残部逼进了中国西部，而在那里他被扔进了监狱。1924年鲍里斯获释，并成为了一个雇佣兵头目来继续他的事业。随后在山东掌权的张宗昌把他和他的残部请到了他的帐中。在张宗昌倒台后，靳云鹗选择保持张宗昌和鲍里斯所签订的协议，招揽了这支可靠军队。到目前为止，鲍里斯是在华俄军最高军衔的军官，然而他并不想大张旗鼓地四处炫耀此事。如今在靳云鹗死后，鲍里斯驱逐了二张独霸山东，作为一个外国人，他的地位极度不稳，但是有风险也有金钱..."
  POLITICS_BORIS_ANNEKOV_DESC:0 "§Y指挥官介绍\n§Y生于：§L\n1890年\n俄罗斯帝国，诺夫哥罗德省\n§Y军旅生涯：§L\n鲍里斯在1914年之前一直在西伯利亚的哥萨克部队之中服役，而随后他参加了世界大战。在1918至1920年期间鲍里斯组织并领导了一支旨在反布尔什维克的哥萨克部队。在谢米列契和塞米巴拉金斯克地区立下赫赫战功。1920年，红军把他带领的残部逼进了中国西部，而在那里他被扔进了监狱。1924年鲍里斯获释，并成为了一个雇佣兵头目来继续他的事业。随后在山东掌权的张宗昌把他和他的残部请到了他的帐中。在张宗昌倒台后，靳云鹗选择保持张宗昌和鲍里斯所签订的协议，招揽了这支可靠军队。到目前为止，鲍里斯是在华俄军最高军衔的军官，然而他并不想大张旗鼓地四处炫耀此事。"
  POLITICS_QU_YINGUANG_DESC:0 "屈映光早年受秋瑾鼓舞，加入了革命军，尔后归于北洋军阀旗下。1919年，屈映光出任山东省省长，齐鲁大地由此成为了他安身立命的基本盘。屈映光以行动证明了自己的领导才能，任期内治黄河水，与衍圣公合作，共同保护儒教等非物质文化遗产。如此经年，他被调入北洋政府，且和同样信佛的段祺瑞关系密切。屈映光是随他母亲信佛的，这也影响了他与宗教团体及慈善组织的合作，还荣膺法号“法显”，绰号“屈菩萨”。1926年，段祺瑞倒台。屈映光移居上海，仍坚持控诉北京政府的专制腐败。\n\n1932年上海起义，屈映光一手创办的慈善机构“仁盟”，因有遭工团特务渗透之疑，惨遭捣毁。与许多同僚一样，他也逃离了上海，并做了最终打算：回山东去。而在山东，中国最为臭名昭著的“混账军阀”张宗昌虎踞泉城，放任鸦片泛滥，淫威肆虐，民不聊生。他刚回鲁，立即通过山东禁毒协会及衍圣公与北京盟友搭上线，所携慈善机构于曲阜就地改组为“归仁会”。他很少公开和张督理叫板，但仍频繁与直系及朝廷密谈，卯足了劲儿想从根本上把山东的腐败问题治回去。屈映光坚信，中国若要战胜腐败与罪恶，就必须借助皇帝的宗教与政治秩序。他对满清贵族的态度有所保留，但支持溥仪皇帝个人。屈映光一度有幸谒见溥仪本人，且对皇帝在佛教上的造诣与理念颇感认同。他开始相信，大清皇帝才是在中国推行和谐、佛法及宗教政治秩序的完美人选。"
+ SQI_jie_yue: "渡瀬結月"
+ SQI_meng_yi: "冈田梦以"
+ SQI_zou_ying: "高尾奏音"
+ SQI_mi_xi_qian: "米泽茜"
+ SQI_li_zi: "佐佐木李子"
 
  SQI_honored_master:0 "上师"
  SQI_honored_master_desc:0 "在泰山之巅，张天然成功让臭名昭著的张宗昌皈依于一贯道，于是乎，世界的目光开始远离腐败的济南，而转到张天然一人身上。上师外露谦和，然内心狡诈。他的影响力已经跨越泰山，在山东半岛蔓延开来。"
