--- a/localisation/KR_Liangguang_l_simp_chinese.yml
+++ b/localisation/KR_Liangguang_l_simp_chinese.yml
@@ -3309,11 +3309,11 @@
  GXC_wen_hua_Jiao_liu:0 "吸引德国人才定居"
  GXC_wen_hua_Jiao_liu_desc:0 "欢迎，欢迎，热烈欢迎"
  GXC_wen_hua_ri_ben:0 "开办日文教育"
- GXC_wen_hua_ri_ben_desc:0 " "
  GXC_yin_jin_ji_shu:0 "从日本引进新技术"
- GXC_yin_jin_ji_shu_desc:0 " "
  GXC_zi_zhu_ban_xue:0 "自办会计学校"
- GXC_zi_zhu_ban_xue_desc:0 " "
+ 
+ GXC_zu_jian_yi_bei_zi_yue_dui:0 "组一辈子乐队"
+ GXC_zu_jian_yi_bei_zi_yue_dui_desc:0 "赛博朋克1936的事情不要问那么多"
 
  GXC_quan_qiu_da_bing_gou:0 "全球大并购"
  GXC_quan_qiu_da_bing_gou_desc:0 "这也收购，那也收购，统统收购，没有理由，全部买下！"
