--- a/localisation/KR_Hunan_l_simp_chinese.yml
+++ b/localisation/KR_Hunan_l_simp_chinese.yml
@@ -460,9 +460,7 @@
  HNN_domestic_air_production_desc:0 "湖南省已开始自产飞机用于战斗和运输。"
 
  HNN_economic_integration_leader:0 "经济整合与援助"
- HNN_economic_integration_leader_desc:0 ""
  HNN_economic_integration_hunan:0 "经济整合与援助"
- HNN_economic_integration_hunan_desc:0 ""
  HNN_bout_to_be_annexed:0 "加入联省派"
  HNN_bout_to_be_annexed_desc:0 "面对战争，赵恒惕不顾一切地想要保住湖南，他同意在战争结束后完全并入广州的联省政府。虽然按照联省自治的原则，目前的湖南仍保持独立。但朝向最终实现全面一体化的第一步已经迈出。"
  HNN_autonomy_in_china:0 "湖南自治"
@@ -3216,7 +3214,12 @@
  hungong.166.t:0 "劳动妇女"
  hungong.166.d:0 "妇女占据我省很大一部分人口。湖南的成年妇女大多是简单的农妇或家庭主妇，没有发言权。在社会主义教育以及女性同志们的努力已经开始将她们从传统家庭中解放出来，促使她们更多地参与大城市工厂的工作，并帮助其他女性提高自己的地位。而只有男女在工作上达成同工同酬，女性能够依靠自己创造财富，有可能真正的解放自己，消除社会对女性的歧视。否则物质上依赖于男性，那么男女平权永远无法实现。"
  hungong.166.a:0 "妇女能顶半边天"
-
+ hungong.167.t:0 "和平共处五项原则"
+ hungong.167.d:0 "中国是一个爱好和平的国家，倘若不是外敌入侵，中国愿意在和平、互利和相互尊重主权和领土完整的基础上同各国建立外交关系。“凡愿遵守平等、互利及尊重领土主权等原则的任何外国政府，本政府均愿与之建立外交关系。”这是我们的国家主席[HNN.GetLeader]同志在开国大典上的庄严宣告，向世界表达了新生的人民共和国坚持独立自主、积极谋求与世界各国和平共处的真诚愿望。在这一愿望的基础上，[HNN.GetLeader]同志进一步的提出了被称为“和平共处五项原则”的中国外交理念，这一理念包括：互相尊重主权和领土完整、互不侵犯、互不干涉内政、平等互利、和平共处。和平共处五项原则虽然首先是为处理我国同亚洲民族独立国家的关系而提出的，但它很快就上升为我国处理一般国际关系的准则。\n\n接见婆罗多公社的外交代表团时，[HNN.GetLeader]同志同他们对和平共处五项原则进行深入阐述，强调世界上的国家，不分大小强弱，不论社会制度如何，只要以五项原则来处理相互间的关系，是可以和平相处的。正义的呼声，总能激起最广泛的共鸣。“如果这些原则不仅适用于各国之间，而且适用于一般国际关系之中，它们将形成和平和安全的坚固基础”，“如果这些原则能为一切国家所遵守，则社会制度不同的国家的和平共处就有了保证”"
+ hungong.167.a:0 "平等互利，和平共处"
+ hungong.168.t:0 "打扫干净屋子再请客"
+ hungong.168.d:0 "从鸦片战争，英国用坚船利炮打开中国国门，到中日甲午战争再到《辛丑条约》签订，从破败的清政府到国民党执政时期，帝国主义列强逼迫旧中国签订大量不平等条约，强占中国领土并攫取诸如在中国驻扎军队、领事裁判权、控制中国海关和对外贸易、垄断中国金融和财政等一系列特权和利益，严重损害了中国独立、主权和利益。\n\n在党内会议中[HNN.GetLeader]同志同中央的各位同志明确了新中国的外交方针政策——“打扫干净屋子再请客”。他说：“我们这个国家，如果形象地把它比作一个家庭来讲，它的屋内太脏了，柴草、垃圾、尘土、跳蚤、臭虫、虱子什么都有。解放后，我们必须认真清理整顿，等屋内打扫清洁、干净，有了秩序，陈设好了，再请客人进来。我们的真正朋友可以早点进屋子来，也可以帮助我们做点清理工作，但别的客人得等一等，暂时还不能让他们进门。”\n\n“打扫干净屋子再请客”的外交方针，表达了摆脱屈辱外交的决心，尤其是要废除帝国主义据以攫取在华特权的一切不平等条约。[HNN.Getname]必须彻底取消帝国主义国家在中国的一切特权”以及“对于国民党政府与外国政府所订立的各项条约和协定，[HNN.Getname]中央政府应加以审查，按其内容，分别予以承认，或废除，或修改，或重订”。过去签订的一切条约中除了部分边界条款需另行处理外，没有一个条约或协定可以全部承认或值得加以修改而适用。北京市内所有帝国主义军营一律收回，建筑全部征用。某些外国所谓的驻兵权必须取消，不平等条约不予承认，七日之内各使馆人员全部撤离。"
+ hungong.168.a:0 "必须摆脱屈辱外交"
 
 #中社部
  hunqingxi.1.t:0 "125号目标人物 许世友"
@@ -3438,13 +3441,13 @@
 
  #毛泽东
  hunmao.1.t:0 "荒唐的决定"
- hunmao.1.d:0 "也许是有什么深思熟虑，也许只是一时糊涂，又或是受了什么其他思想的蛊惑，总之工团党的领导人[HNN.GetLeader]与今日宣布万众瞩目的土地改革工作正式结束。不得不说此命令一出，党内外都异常错愕，他们难以想象目前的土地改革工作进度不足十分之一的情况下，党主席就如此决然的宣布改革结束。这立刻引发了一阵恐怖的退党潮，即便是党中央也有一些领导人在[HNN.GetLeader]讲话的同时敲桌子离开，甚至一些中央部委在自己部门的报刊杂志上公然抵制党主席的决定。\n\n在基层，干部们挠破了头都想不出如何向围攻自己询问传言是否属实的农民们解释，党主席真的宣布了改革结束的事实。被农民们认为欢天喜地的地主们也没有那些轻松，他们也没有想明白[HNN.GetLeader]的目的在哪儿？\n\n党外群情汹涌，党中央混乱不堪，军队也不能幸免。基层军官和士兵本就大多数出身自穷苦家庭，他们是最支持土地改革工作的一批人，同时也是当下最反对党主席突然宣布土地改革结束的一帮人。但是军队的秩序使他们的抗议只限于私下交流，暂时还没有向上突破。\n\n也许，这次风波将和曾经的许多次风波一样就这么缓慢的渡过，[HNN.GetLeader]的地位虽有动摇，但是仍然稳固..."
+ hunmao.1.d:0 "也许是有什么深思熟虑，也许只是一时糊涂，又或是受了什么其他思想的蛊惑，总之工团党的领导人[HNN.GetLeader]于今日宣布万众瞩目的土地改革工作正式结束。不得不说此命令一出，党内外都异常错愕，他们难以想象目前的土地改革工作进度不足十分之一的情况下，党主席就如此决然的宣布改革结束。这立刻引发了一阵恐怖的退党潮，即便是党中央也有一些领导人在[HNN.GetLeader]讲话的同时敲桌子离开，甚至一些中央部委在自己部门的报刊杂志上公然抵制党主席的决定。\n\n在基层，干部们挠破了头都想不出如何向围攻自己询问传言是否属实的农民们解释，党主席真的宣布了改革结束的事实。被农民们认为欢天喜地的地主们也没有那些轻松，他们也没有想明白[HNN.GetLeader]的目的在哪儿？\n\n党外群情汹涌，党中央混乱不堪，军队也不能幸免。基层军官和士兵本就大多数出身自穷苦家庭，他们是最支持土地改革工作的一批人，同时也是当下最反对党主席突然宣布土地改革结束的一帮人。但是军队的秩序使他们的抗议只限于私下交流，暂时还没有向上突破。\n\n也许，这次风波将和曾经的许多次风波一样就这么缓慢的渡过，[HNN.GetLeader]的地位虽有动摇，但是仍然稳固..."
  hunmao.1.a:0 "也许，我是说也许..."
  hunmao.2.t:0 "泛滥的邪教"
  hunmao.2.d:0 "人民是有信仰需求的，尽管中国工团党在湖南时期就开始查封各地的一贯道等非法宗教，但是由于土地改革的失败，不少的贫民丧失了希望，为这些宗教的死灰复燃提供了一片沃土。有些人就此大胆妄为了起来，比如有些疯子将毛主席和弥勒佛结合起来，宣称毛泽东乃大慈大悲润之菩萨，是来救苦救难普渡世人的，他们简直是失心疯了。再比如说在江西甚至有个叫石顶武的家伙将白莲教的弥勒救世说杂糅上其他思想开创了三期普渡教，自称自己是“燃灯古佛”再世，还建立了大中华佛国。不过这些人近日已被江西警方逮捕了，大中华佛国就此覆灭。各地警方在其辖区内也发现了不少类似的新兴邪教，他们的思想怪异程度莫衷一是。"
  hunmao.2.a:0 "人民需要信仰，但不能是这种信仰"
  hunmao.3.t:0 "《炮打司令部——我的一张大字报》"
- hunmao.3.d:0 "然而风暴一起，就没有那么容易停下来。第一份直接攻击[HNN.GetLeader]的文件我们不知道是何人所著。但是最著名的一份一定是今日由湖南省省委书记、革命元老毛泽东所写下的《炮打司令部——我的一张大字报》。这份文件他本想在《人民日报》上刊发，但是《人民日报》社长胡乔木担心事态闹大，便没有同意刊发。毛泽东只能转而在《湖南日报》上刊登，文章一经刊发果然如胡乔木预料那般引发轩然大波，湖南一时间纸价翻了个番，文章广为流传，对党中央形成一股极大的压力。由于毛泽东不仅仅是地方大员还是建党十二代表之一，一时间响应者众多。上海市在市委书记柯庆施的主持下《文汇报》作为第二个官方报纸刊登了毛泽东的文章。广东的赵紫阳，湖北的王任重，浙江的谭震林，山西的程子华等人也纷纷跟进，地方大员们形成了一种新的默契对抗党中央，尤其是[HNN.GetLeader]主席本人。尽管军队领导人们尽管没有站队，但是他们底下的大头兵已经几乎能够熟背炮打司令部了。因此在这场较量中，从一开始党主席就是在绝对下风的位置"
+ hunmao.3.d:0 "然而风暴一起，就没有那么容易停下来。第一份直接攻击[HNN.GetLeader]的文件我们不知道是何人所著。但是最著名的一份一定是今日由湖南省省委书记、革命元老毛泽东所写下的《炮打司令部——我的一张大字报》。这份文件他本想在《人民日报》上刊发，但是《人民日报》社长胡乔木担心事态闹大，便没有同意刊发。毛泽东只能转而在《湖南日报》上刊登，文章一经刊发果然如胡乔木预料那般引发轩然大波，湖南一时间纸价翻了个番，文章广为流传，对党中央形成一股极大的压力。由于毛泽东不仅仅是地方大员还是建党十二代表之一，一时间响应者众多。上海市在市委书记柯庆施的主持下《文汇报》作为第二个官方报纸刊登了毛泽东的文章。广东的赵紫阳，湖北的王任重，浙江的谭震林，山西的程子华等人也纷纷跟进，地方大员们形成了一种新的默契对抗党中央，尤其是[HNN.GetLeader]主席本人。尽管军队领导人们还没有站队，但是他们底下的大头兵已经几乎能够熟背炮打司令部了。因此在这场较量中，从一开始党主席就是在绝对下风的位置"
  hunmao.3.a:0 "或许，他应该考虑如何逃跑了"
  hunmao.4.t:0 "向[ROOT.Capital.GetName]进军"
  hunmao.4.d:0 "在一系列文件交锋之下，毛泽东决定敲下对[HNN.GetLeader]的最后一击，此前他前往了各个支持他的省份发表了一系列著名的演讲后，他回到了湖南，在下飞机时他只说了一句话：“革命无罪，造反有理！”这一声发言，向骚动的农民们通过了强有力的背书，首都郊区的农民、首都各个高校的学生纷纷上街游行，更多的人像参加开国仪式那般向[ROOT.Capital.GetName]汇聚。尽管在首都卫兵部队领导人劝说下，[HNN.GetLeader]签署了戒严令，但是这毫无意义，士兵们早已参与到了游行队伍中，他的命令就像一个笑话，或者说他如今仍然假装自己还是党主席这件事本身就是一个笑话。党代会早已开启了他们从前从未动用的弹劾权力，很快，我们就将有一位新主席了。"
@@ -3482,6 +3485,9 @@
  hunmao.15.t:0 "卸下面具"
  hunmao.15.d:0 "在教书先生李子任抱着那一大叠厚厚的资料走进工团党中央委员会的临时办公室的时候，他莫名有些恍惚。1926年，当李子任还用着自己的原名的时候，在上海组织工人运动的二弟受到叛徒出卖被效忠于帝国主义列强的巡捕房枪毙。仅一年后，随着北伐战争的失败，组织农民游击的小妹被军阀还有地主们杀害，地主和他的同伙们到处炫耀自己是如何将一位女国民党活生生地切碎，而湖南的国民党同志们什么都做不到，他们要不自身难保、要不忙着投降。紧接着，随着广州陷落，三弟的头被高高挂在广州城门上，孙传芳认为这样可以大大威慑可恶的“反贼”们。最后是妻子，妻子在转移革命资料的时候被抓走，汤芗铭将她残忍地处死并且抛尸在菜市场的街头，而他当时却不在她身边。\n\n于是随着他的同志和家人爱人们一个个被杀害，湘省境内再也听不到李子任的原名，很多人揣测他和自己的家人们一同被军阀杀害在了某个不知名的地方，很多人则认为北伐的失败和家人同志们的死亡让他心灰意冷从此放弃了革命。\n\n说的对，但是不全对，那位革命者确实心灰意冷了，但是他没有放弃革命，他开始反思过去的工团主义道路和国民党道路，他意识到过去松散的革命组织形式以及对于国民党的过度依附只会让革命陷入困境。于是当湖南工团党在董必武的领导下提出了应该将布尔什维主义的组织形式同工团主义的革命理想结合起来之后，化名为教书先生李子任的他立马投入了工团党的革命工作中，他表面上是多所女校、工人夜校、农校和私塾的校长，暗地里面却以此为基础构建起来了一套联系董必武领导的湘赣闽中央革命根据地和湘省内各个工团党据点的情报网络，被称为湖南工团党地下的情报大王。\n\n在恍惚和回忆中，他已经将那一叠厚厚的资料交给了中央委员会的各位委员们，在同志们的一声声呼唤中，他回过神来，连忙同中央委员会的同志互相致意。于是紧接着，他听到了自己那隐藏许久的真名再次由他人口中说出："
  hunmao.15.a:0 "“辛苦了，泽东同志！”"
+ hunmao.16.t:0 "三个世界"
+ hunmao.16.d:0 "一战以来国际形势发生了重大变化，尤其是我们中国从一个积贫积弱的半殖民半封建农业国中解脱了出来，推翻了压在人民身上的三座大山，甚至还搞起了工业化，一点点的站了起来。而世界的大格局呢？第三国际和帝国公约间有着不可调和的矛盾，他们都加紧对外扩张，争夺世界霸权，对世界和平构成了极大威胁。中国在反对以德国为代表的殖民帝国霸权主义的同时，也要同以法国为代表的大国沙文霸权主义。这不仅是我们中国的想法，在广大的亚非拉地区，革命者们都开始形成这一共识。反对两个超级大国的干涉、控制、压迫，反帝、反殖民、反霸权斗争风起云涌。国家要独立，民族要解放，人民要革命成为不可阻挡的历史发展潮流。这点毛泽东同志看得非常清楚。\n\n他在一次党内会议上初次提出关于“三个世界”划分的战略思想。这一思想的基本点是：法、徳是第一世界；亚非拉和其他地区的发展中国家是第三世界；处于这两者之间的发达国家是第二世界。这“三个世界”互相联系又互相矛盾。两个超级大国都想以这样或那样的方式把发展中国家置于它们各自的控制之下，同时还要欺负实力不如它们的发达国家。处于超级大国和发展中国家之间的一些发达国家，既对第三世界国家保持着各种不同形态的殖民主义关系，又在不同程度上受着这个或那个超级大国的控制、威胁和欺负。而广大的发展中国家，目前正在经历反殖民斗争，尤其是我们的非洲同志们他们在徳属中非、法属北非、葡属西非等地不断开展人民战争。中国作为第三世界的一员，要加强同广大第三世界国家的团结，争取第二世界国家，联合反对超级大国，而相对来说尤其是德意志殖民帝国的控制和压迫。"
+ hunmao.16.a:0 "无产阶级万岁！"
 
  #大选
  hungong.38.t:0 "中华人民共和国第一次政治协商会议开幕式讲话"
