--- a/localisation/KR_Hunan_l_simp_chinese.yml
+++ b/localisation/KR_Hunan_l_simp_chinese.yml
@@ -1179,6 +1179,7 @@
  HNN_dong_victory:0 "董必武当选主席"
  HNN_he_victory:0 "何叔衡当选主席"
  HNN_tang_victory:0 "唐生明当选主席"
+ HNN_gao_gang_Portrait_Picker:0 "高岗的头像"
 
  HNN_totalist_party1:0 "工团党"
  HNN_totalist_party1_long:0 "共产派(Communist faction)\n§g由于实行了将布尔什维主义组织形式同工团主义理想结合的路线，湖南的中国工团党中布尔什维主义的影响较为巨大，甚至有一些党员公然宣称支持布尔什维主义而非英法工团主义，但是这群共产主义者长期无法形成一个统一的势力，其中长期分为反对极权宪章化的布尔什维主义者和支持极权宪章理念的布尔什维主义者，两者都宣称自己是正统。不过如果革命的激进需要没有被满足，这些共产主义者也可能会获取更多力量进行进一步行动。§!"
@@ -3220,6 +3221,10 @@
  hungong.168.t:0 "打扫干净屋子再请客"
  hungong.168.d:0 "从鸦片战争，英国用坚船利炮打开中国国门，到中日甲午战争再到《辛丑条约》签订，从破败的清政府到国民党执政时期，帝国主义列强逼迫旧中国签订大量不平等条约，强占中国领土并攫取诸如在中国驻扎军队、领事裁判权、控制中国海关和对外贸易、垄断中国金融和财政等一系列特权和利益，严重损害了中国独立、主权和利益。\n\n在党内会议中[HNN.GetLeader]同志同中央的各位同志明确了新中国的外交方针政策——“打扫干净屋子再请客”。他说：“我们这个国家，如果形象地把它比作一个家庭来讲，它的屋内太脏了，柴草、垃圾、尘土、跳蚤、臭虫、虱子什么都有。解放后，我们必须认真清理整顿，等屋内打扫清洁、干净，有了秩序，陈设好了，再请客人进来。我们的真正朋友可以早点进屋子来，也可以帮助我们做点清理工作，但别的客人得等一等，暂时还不能让他们进门。”\n\n“打扫干净屋子再请客”的外交方针，表达了摆脱屈辱外交的决心，尤其是要废除帝国主义据以攫取在华特权的一切不平等条约。[HNN.Getname]必须彻底取消帝国主义国家在中国的一切特权”以及“对于国民党政府与外国政府所订立的各项条约和协定，[HNN.Getname]中央政府应加以审查，按其内容，分别予以承认，或废除，或修改，或重订”。过去签订的一切条约中除了部分边界条款需另行处理外，没有一个条约或协定可以全部承认或值得加以修改而适用。北京市内所有帝国主义军营一律收回，建筑全部征用。某些外国所谓的驻兵权必须取消，不平等条约不予承认，七日之内各使馆人员全部撤离。"
  hungong.168.a:0 "必须摆脱屈辱外交"
+ hungong.169.t:0 "高岗的头像"
+ hungong.169.d:0 "高岗主席今天会以什么样子示人呢？"
+ hungong.169.a:0 "带上眼镜"
+ hungong.169.b:0 "取下眼镜"
 
 #中社部
  hunqingxi.1.t:0 "125号目标人物 许世友"
