--- a/localisation/KR_Hunan_l_simp_chinese.yml
+++ b/localisation/KR_Hunan_l_simp_chinese.yml
@@ -467,6 +467,8 @@
  HNN_autonomy_in_china_desc:0 "湖南已被授予了特殊的自治权。督理赵恒惕的地位也得到了实际的保障，直到他选择辞职或修改省选举法。而这项交易，以及当前的立省文件，都明确规定中央政府无权对湖南过问。\n如果管理不当，撤销湖南自治权可能会成为未来的一个问题。"
 
  CN_zhong_ke_yuan:0 "中国科学院"
+ HNN_yi_zhong_compny:0 "一重集团"
+ HNN_yi_zhong:0 "工业企业"
  shuikoushan_mining:0 "水口山矿务局"
  hengyang_arsernal:0 "衡阳兵工厂"
  zhuzhou_artillery:0 "株洲炮兵技术研究处"
