--- a/localisation/KR_Hunan_l_simp_chinese.yml
+++ b/localisation/KR_Hunan_l_simp_chinese.yml
@@ -1135,10 +1135,9 @@
  POLITICS_HNN_LIU_SHAO_QI_DESC:0 "刘少奇出生于一个与江西有所联系的富裕湖南家庭，他因而有幸出国留学。1920年，他被一些革命前辈招募加入中国工团党，而他在法公社的经历亦使他大开眼界。他在1921年正式加入新成立的中国工团党，并于1922年回国协助组织了江西与湖南地区的多次罢工。他还结识了李立三，成为中国工团党中崭露头角的成员。\n\n对国民党和工团党而言，北伐时期的日子困难无比。当时，刘少奇被迫转入地下，而后在闽赣起义中担任下级官员。尽管他被认为是位支持陈独秀-李立三路线的中国工团党正统派成员，但他在闽赣建立的关系可能被证明是同盟会试图将其运动扩展到城市无产阶级基础之外的关键。\n\n刘少奇之后被任命为中国工团党福建省委书记，以在国民革命政府的土地运动中心里赢得朋友。他的文笔很好，他发表过一系列的文章，包括一篇颂扬群众运动的文章，认为革命应当为群众争取自由，赢得他们的信任，并采取民主的工作和组织方法。他要求工团党干部和领导人遵守纪律，发扬民主，在组织上保持公开透明，以保证领导形式的民主。此外，他还要求实行土地改革。"
  POLITICS_HNN_GAO_GANG_DESC:0 "高岗出身一个贫苦农民家庭。13岁到米脂县龙镇小学读书。1922年，考入横山县立第一高等小学堂学习。1925年春，与一高学生曹动之、石作琦、王东皋、王怀信等人组织了“一高”学潮，结识刘志丹。1925年秋，进入榆林中学学习。1926年，经胡立亭、史巍然介绍加入中国工团党。1927年2月，进入冯玉祥国民军的西北中山军事学校学习。6月，因开展革命活动被发觉，在组织安排下，离开中山军事学校回到了横山县。\n\n由于大革命的失败，1927年秋，其与当地党组织在响水堡等地举办了农民运动通俗讲习所，成立农民协会，建立根据地，领导农民开展抗租和抗捐斗争。1928年春，陕北地区遭受特大旱灾，高岗、刘志丹、崔田夫等人发动农工暴动，成功在陕北组建了革命根据地，后与习仲勋等人的陕甘边革命根据地合并为陕甘革命根据地。他们并长期与马家军、阎锡山、恩琴等势力打游击战取得不小战果。是工团党除湖南三省根据地外全国第二大根据地。\n\n由于其武装出身，导致高岗天然和工团党内的军队势力来往密切，而看不起如组织工人运动的刘少奇、组织情报工作的周恩来等人，认为他们只是花架子，对革命并不忠诚。"
  POLITICS_HNN_CHEN_YUN_DESC:0 "陈云出生于江苏省苏州府吴江县汾湖巡检司（原久泳乡）章练塘的一个农户家庭。他两岁丧父，四岁丧母，与胞姐陈星由外祖母抚养，过继给舅父廖文光，改姓廖，名陈云。1917年，经镇颜安小学校长杜衡伯举荐，免费入颜安高等小学读书。1919年，因家贫无力继续求学，经老师张行恭介绍，到上海商务印书馆当学徒，就此接触到了工团主义吗，也是这段时间他初次接触到了经济运作方式。1925年五卅运动时期，陈云被推选为商务印书馆罢工临时委员会委员长，与沈雁冰等一起领导全馆职工大罢工。随后由董亦湘、恽雨棠介绍加入中国工团党，就近在上海总工会中任职，大革命期间参与并领导了多次上海工人起义。\n\n大革命失败后，他和汪寿华等人一起转入租界继续在上海斗争，同时负责与周恩来的特科沟通，接应特科特工，为他们安排假身份。1932年上海起义失败后，上海总工会进一步收缩，而陈云也在于董必武多次沟通后，选择离开上海，加入了三省边界根据地，负责根据地的经济工作。\n\n他有着党内其他人所没有的经济头脑，他不同于市场派那样直接投入反革命的怀抱，也不像某些人那般要求全面的计划经济，他会平衡好双方，走一条独属于中国的特色社会主义经济路线。"
- Qian_Xue_DESC:0 " "
- Guo_Mo_DESC:0 " "
+ Qian_Xue_DESC:0 "钱学森，1911年12月11日生于上海，出身于吴越钱氏家族。、，是五代吴越国国王钱镠的第33代孙。1933年毕业于国立交通大学，随后赴美留学，在获得美国麻省理工学院航空工程理学硕士学位后至加州理工学院求见空气动力学权威西奥多·冯·卡门教授，征求进修意见。冯·卡门建议钱学森入加州理工学院研究院进修。同年秋，入加州理工学院研究院，师从冯·卡门。在美国求学的同时，钱学生也心系祖国。在祖国统一，向他抛来橄榄枝的第一时间他便启程归乡。"
+ Guo_Mo_DESC:0 "郭沫若是四川省乐山县人，少年曾就读于成都石室中学。父亲郭朝沛经营商业。母亲杜福荪，是一个没落的官宦人家的女儿。1914年，郭沫若留学日本，先于旧制第一高等学校习日语，升读第六高等学校，1918年入九州帝国大学医学部，1923年毕业。1921年1月，还在上学的郭沫若以病假名义休学3个月，以便前往京都帝国大学旁听文科。1921年发表第一本新诗集《女神》。同年又与郁达夫等人一同创立文学学社“创造社”，是新文化运动的重要旗手。"
  POLITICS_HNN_HU_YAOBANG_DESC:0 "胡耀邦生于湖南省浏阳县西岭镇中和乡苍坊村，家中因行九而乳名九伢子。1926年，胡耀邦在读完初小后，到文家市的里仁学堂读高小，学堂校长陈世乔、教师甘思藻、吴千晋等都是工团党员，胡耀邦因此开始吸收工团主义。1927年，大革命失败，里仁学堂被查封，陈世乔、吴千晋等人被北洋军阀逮捕并杀害。1929年，胡耀邦转到浏阳县立初级中学读书，并经本县杨桂英介绍，秘密加入青年团。胡耀邦回乡后，因为能够读书识字，被推举为乡团支部书记，团结乡村支援红军与三省边界革命根据地。1931年，当地乡团暴露，引发军阀赵恒惕的围剿，胡耀邦等人在革命武装的掩护下突围前往中央驻地，而胡耀邦因此留在青年部担任干事。1933年8月，升任青年部部长、兼任宣传部部长。9月正式加入中国工团党。"
- POLITICS_HNN_ZHAO_ZIYANG_DESC:0 ""
  Kang_Shen_DESC:0 "康生，原名张宗可，字少卿（绍卿），生于山东省胶州大台庄当地的一个名门望族，先祖张若獬，崇祯七年进士，南京户部主事，祖父张鸿仪曾为贡生。由于其出生于书香世家，由幼年时代便开始接触文艺作品，因此擅长书法绘画。1924年，张宗可赴上海大学学习，并改名张溶。在大学学习时，担任上海总工会干事、上海大学特支书记。1927年大革命失败后，张宗可出逃海外，在法国的第三国际总部进修。但是在此期间张宗可逐步接受到俄国的布尔什维克思想与英国莫斯利发起的准则派运动的感染，他私下为自己取名康斯坦丁（Константи́н），其中文音译为康生。同样在流亡法国时期，康生被吸纳进入了周恩来领导的特科中，他也假装是中裔俄国人重新回到上海加入革命事业中，在特科的时日内由于其出色的能力，他成功晋升到了特科副手，兼行动科长的地位。"
  POLITICS_HNN_LIN_BIAO_DESC:0 "林彪出生于殷实的商人家庭，青年时期，他就见证了父亲的生意因军阀剥削而陷入困顿。他成为了一名左翼活动家，参加过各种学生罢课与抗议活动，后逃往南方投考新设立的黄埔军校。\n\n作为一名年轻学员，林彪钦佩校长蒋介石的气质。他在校内表现优异，后参与北伐，几个月就从见习排长晋升到营长。北伐失败后，他仍然追随叶挺，与国民革命军残余的大部队转入地下打游击。正是在闽赣的群山之中，林彪这个名字变得越来越响亮了。但也正是在闽赣他接受到了来自另一个革命根据地——湖南三省边界根据地传播的工团思想。尽管他对这些思想并没有太大兴趣，但他对这些人实际实现的布尔什维克制度更感兴趣，他在其中看到了一条有别于现在中国大多数革命者的“新”的道路。"
  POLITICS_HNN_HE_LONG_DESC:0 "贺龙在贫苦农家中出生长大，从小没怎么受过正规的教育。贺龙的父亲是名清朝小吏，颇有番武力，这些才能在贺龙身上也有所体现。20岁时，贺龙的叔叔因欠债被税吏活活打死，而贺龙一气之下直接杀掉了税吏，从此开始了他那漫长的游击斗争生涯。1920年，国民党异军突起，此时贺龙劫富济贫的法外好汉的名气越传越远，他带着爱刀一人一刀组建了一支地方部队。北伐期间，贺龙在张发奎手下担任教官与指挥官的角色，也在党内找到了自己的归宿——社会主义。北伐的失败并没有浇灭贺龙渴望祖国变革的热情，虽然他被迫退回老家湖南省，但是在湖南他和彭德怀一同为工团主义者的活动提供庇护。"
@@ -1148,7 +1147,6 @@
  POLITICS_HNN_BO_YI_BO_ARMY_DESC:0 ""
  POLITICS_HNN_HU_YAO_BANG_ARMY_DESC:0 ""
  POLITICS_HNN_LIU_SHAO_QI_ARMY_DESC:0 ""
- POLITICS_HNN_ZHOU_ZI_YANG_ARMY_DESC:0 ""
  HNN_wang_zhen: "王震"
  POLITICS_HNN_WANG_ZHEN_ARMY_DESC:0 "§Y指挥官介绍\n生于：§!§g1908年4月11日，大清帝国 湖南省 浏阳县§!\n§Y军旅生涯：§!§g王震生于湖南省浏阳县北盛仓乡马跪桥村一个佃户家庭，14岁时，王震因家中贫困到长沙想要从军，但是因为年龄问题未能入选，于是只能去当铁路工人，但正因此他接触到了工团思想，加入了一些工团主义的外部组织。为此他积极投身工人运动，曾任工人纠察队队长、粤汉铁路工会长沙段职工分会执行委员等职。1927年，大革命失败的那一年他加入了工团党，同时与从南方逃亡回乡的董必武、何叔衡等人取得了联系，为此他在长沙、武汉等地辗转，从新建立起工团党的地下组织。直到1929年，他回到根据地担任湘东独立一师团政治委员、红八军代理军长等职务从此远离文职投身军务。"
  HNN_Tan_zheng: "谭政"
