--- a/localisation/ideologies_l_simp_chinese.yml
+++ b/localisation/ideologies_l_simp_chinese.yml
@@ -4,7 +4,9 @@
  sorelian_marketism_subtype:0 "修正索雷尔主义"
  sorelian_marketism_subtype_desc:0 "§Y修正索雷尔主义§!\n\n正如正统索雷尔主义中吸收了大量的法国保守主义，诞生在中国的修正索雷尔主义也吸收了大量中式保守主义，如中庸思想、权威崇拜和儒家的家国思想。不同于正统索雷尔主义鼓吹阶级暴力，神话工人阶级的斗争，修正索雷尔主义鼓吹阶级调和，将阶级斗争说成是某种最为可怕的东西。不同于正统索雷尔主义支持经济的社会化，修正索雷尔主义吸收了部分市场自由主义思想，认为经济的社会化会剥夺人民的积极性，鼓吹市场经济和私有化，强调对企业家进行社会主义改造以让工人和旧资产阶级协调。不同于正统索雷尔主义反对文官官僚和政治精英，更崇拜战士和工人中的精英，修正索雷尔主义宣扬对于一切精英的崇拜，甚至包括资本家，而一个强有力的威权政府会扮演统治者的角色。不过同正统索雷尔主义一样，修正索雷尔主义支持民族主义和爱国主义。即使正统索雷尔主义者对修正索雷尔主义百般嫌弃，这种意识形态还是启发了众多后发国家和地区的极权主义者。"
  jun_zheng_ji_quan_subtype:0 "军政极权主义"
- jun_zheng_ji_quan_subtype_desc:0 "§Y军政极权主义§!\n\n军政极权主义是极权宪章的变体，军政极权主义认为民主只会带来争吵和低效，让人民沉浸在妥协的幻想中却什么都得不到，最终成为少数人的傀儡。只有暴力的有组织的集体行动才能够让人民获取自己想要的东西，获得真正的自由，而这种有组织的集体行动的最高境界是军队。因此，军政极权主义希望把社会主义国家变成一个军队，所有人都像军人一样听从领袖的号令进行整齐划一地行动。在军政极权主义国家中，社会将会高度军事化，军人将会被尊崇，经济、政治和社会活动都将像作战一样被上级一层层地指挥。"
+ jun_zheng_ji_quan_subtype_desc:0 "§Y军政极权主义§!\n\n军政极权主义是极权宪章的变体，军政极权主义认为民主只会带来争吵和低效，让人民沉浸在妥协的幻想中却什么都得不到，最终成为少数人的傀儡。只有暴力的有组织的集体行动才能够让人民获取自己想要的东西，获得真正的自由，而这种有组织的集体行动的最高境界是军队。因此，军政极权主义希望把社会主义国家变成一个军队，所有人都像军人一样听从领袖的号令进行整齐划一地行动。在军政极权主义国家中，社会将会高度军事化，军人将会被尊崇，经济、政治和社会活动都将像作战一样被上级一层层地指挥。" 
+ tot_baishi_subtype:0 "百事思想"
+ tot_baishi_subtype_desc:0 "§Y百事思想§!\n\n那是一个冬天，金日成元帅站在白头山上，痛饮了一口冰镇百事可乐，他感叹道，人民是如此的艰苦，人民要将命运牢牢的握在自己的手中。朝鲜要在政治上自主、经济上自足、国防上自卫。朝鲜的人民要紧紧的围绕在金日成元帅的身边，国家才能真正实现社会主义，并最终迈入乌托邦。任何形式的自由主义、反革命行动、偷喝可口可乐的行为或任何其他被认为是国家前进路上障碍的理念都会进行残酷镇压，只有通过对党、对百事和最高领袖保持完全忠诚才能有利于国家，所有未能履行职责的人都会被打上国家与革命的敌人的烙印。" 
 
  syn_islamic_communism_subtype:0 "伊斯兰共产主义"
  syn_islamic_communism_subtype_desc:0 "§Y伊斯兰共产主义§!\n\n在传统的穆斯林地区，自给自足的小农经济根深蒂固，恶劣的生态环境将居民聚落切割的七零八碎，景教，摩尼教，拜火教，长生天，儒教......一次次的占领和暴政激起了一次次的起义和反抗。千年以来，当地的教众要么是屈服于异族，要么是屈服于暴君，那些辛劳勇敢的反抗者永远见不到地上天国的建成，却在光耀的指引下向着天堂奔去。\n\n如今，新疆的劳苦大众第一次尝到了平等、自由、和尊严的滋味。在战胜了各式各样的恶魔后，东突厥斯坦民主革命党仔细思考了这个旧时代的宗教是去是留。阿合买提江一派生根在农村的革命干部提出了一套折中的理论：在不改变革命原则与组织架构的情况下，在改造原有穆斯林基层设施的基础上继续使用经书的宣传方法，这样则不至于导致农村的基层社会组织发生表面上的崩溃，最大程度的团结农民与维护社会秩序，表面上看，这是一个带有共产主义特色的伊斯兰教派，实际上则是披着伊斯兰教派皮囊的共产主义：无须质疑，经书的古老文本只是真主伟大智慧的管中窥豹，真主之全知全能且是超乎时代之存在，怎么能是古代释经者能够有所定论的呢？\n\n“他在信徒的心降下安宁，以便他们增加信仰，继他们原有的信仰之后。”"
