--- a/localisation/KR_Liangguang_l_simp_chinese.yml
+++ b/localisation/KR_Liangguang_l_simp_chinese.yml
@@ -3631,6 +3631,9 @@
  lngst.49.t:0 "老大个万岁"
  lngst.49.d:0 "从肯德基宪政国访问归来的卡彭老大全然不顾已经吃的很饱了，连夜来到一家麦当劳点了一份麦麦脆汁鸡套餐孜孜不倦地同数百万人民群众一起欢乐地享受起来。吃到很晚了，发现仍然有很多人民群众在享受美味的麦当劳，便亲自送顾客出门，要自己的司机一个接一个地送他们回家，在去门口的路上，我们说“卡彭老大，您回去继续吃吧，您刚从肯德基宪政国回来。”卡彭老大摇摇头“不碍事，你们知道，现在南方有很多人把我们麦当劳当做敌人，不断造谣我们的食物致癌，说我们的白羽鸡公社的鸡有八个翅膀，你们是麦当劳的顾客，你们的事情便是麦当劳的事情，是头等大事。”我们都激动了，嘴里流着口水。多好的卡彭老大呀！"
  lngst.49.a:0 "感动的泪水从嘴角滑落"
+ lngst.50.t:0 "甘红血染"
+ lngst.50.d:0 "可口可乐，那抓人眼球的包装，恰到好处的气泡，入口极致的甘甜，每个品尝过可口可乐的国民都发自心底地喜欢上了它。然而，就是这样美好的东西，却只在深巷小贩和地下酒馆里苟延残喘地活着，任何胆敢僭越百事可乐地位的国民都会被逮捕，扑杀，好似被围猎的巫女。他们中有的住进了西冰库，有的被沉进了汉江，但更多的是被乱枪打死在某个阴沟小巷里，亦或是在一阵突如其来的敲门声后死在开门前的一刹那。\n\n此刻已是深夜两点，亮的发暗的小酒馆里弥漫着硝烟和铁腥味，高木正雄穿着那身衣角笔直的军装好整以暇地坐在吧台，几分钟前还在和他聊着怎么给学校里挑食的女儿带什么饭才行的老板，此刻已经倒在血泊中；邻座那个最爱喝可口可乐的小孩，每次喝多了就恶作剧般冲到他面前朝他打嗝的小屁孩，现在瞳孔涣散，手里紧握的钢签被无力地丢下，嘴角流着血，卧在他身旁；那个总是望着他发呆，时不时给他添上满杯的可人儿，靓丽的脸上多了两个黑红相间的可怖孔洞，她写满凄美的眼睛再也不能温柔地望向他了。\n\n“多好的饮料啊”，他端着玻璃杯，抿了一小口，看着杯子里鲜红的液体映照着的他。回过身，高木正雄对着门前几支澄亮的手电筒，高高举起了酒杯，好似举起了象征着冠军的奖杯，“没喝过这么好的吧，这点就送你们了，希望...”\n\n“砰”地一声枪响，打断了他的话。高木正雄望着胸前不断扩张的红色，“真的好像可口可乐一样啊”，他忽然想到，“喝完再走，那可真好。”他露出了解脱般的笑容，随后一阵疾风骤雨般的枪声在这个阴暗逼仄的小酒馆里爆发。然而在那暴风雨般的激昂乐章下，如血的革命种子已经悄然播撒。"
+ lngst.50.a:0 "会吗？"
 
  #军改
  GXC_shang_tuan_jun_shi_gai_ge:0 "暴力亦是商品"
