--- a/localisation/KR_East_Turkestan_l_simp_chinese.yml
+++ b/localisation/KR_East_Turkestan_l_simp_chinese.yml
@@ -601,6 +601,7 @@
  SIK_Dalelkhan_Sugirbayev: "达列力汗·苏古尔巴也夫"
  SIK_Isakbek_Mononov: "伊斯哈克伯克·穆努诺夫"
  SIK_Muhemmet: "买买提伊敏·伊敏诺夫"
+ ETS_Omer_Qasimi: "吾买尔·哈斯木"
 
  ETS_bao_er_han_hog: "包尔汉·沙希迪"
  ETS_sai_fu_ding_for: "赛福鼎·艾则孜"
