--- a/localisation/KR_Hunan_l_simp_chinese.yml
+++ b/localisation/KR_Hunan_l_simp_chinese.yml
@@ -1165,6 +1165,7 @@
  POLITICS_HNN_Chen_Yun_ARMY_DESC:0 "§Y指挥官介绍\n生于：§!§g1905年6月13日，大清帝国 江苏省 青浦县§!\n§Y军旅生涯：§!§g陈云"
  HNN_wang_gan_chang: "王淦昌"
  HNN_zhao_jiu_zhang: "赵九章"
+ HNN_guo_yong_huai: "郭永怀"
 
  HNN_shibaidegeming_tooltip:0 "我们将欢迎我们曾经的同志的到来"
  HNN_revolutionary_army_tt:0 "§Y湖南农工将被动员起来组成§!§R一支革命军事力量§!"
